--- a/BethanysPieShop/Views/Pie/List.cshtml
+++ b/BethanysPieShop/Views/Pie/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BethanysPieShop.Models.Pie>
+﻿@model BethanysPieShop.ViewModels.PieListViewModel
 <!DOCTYPE html>
 
 <html>
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>
-        @ViewBag.CurrentCategory
+        @Model.CurrentCategory
     </h1>
-    @foreach(var pie in Model)
+    @foreach(var pie in Model.Pies)
     {
         <div>
             <h2>@pie.Name</h2>
