--- a/BethanysPieShop/Views/Pie/Details.cshtml
+++ b/BethanysPieShop/Views/Pie/Details.cshtml
@@ -11,7 +11,11 @@
         <p>@Model.LongDescription</p>
         <h3 class="pull-right">@Model.Price.ToString("c")</h3>
         <div class="addToCart">
-            <p class="button"></p>
+            <p class="button">
+                <a class="btn btn-secondary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" asp-route-pieID="@Model.PieId">
+                    Add To Cart
+                </a>
+            </p>
         </div>
     </div>
 </div>
