--- a/BethanysPieShop/Views/Shared/_PieCard.cshtml
+++ b/BethanysPieShop/Views/Shared/_PieCard.cshtml
@@ -5,6 +5,9 @@
         <img src="@Model.ImageThumbnailUrl" class="card-img-top" alt="@Model.Name">
         <div class="card-body pie-button">
             <h4 class="d-grid">
+                <a class="btn btn-secondary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" asp-route-pieID="@Model.PieId">
+                    + Add To Cart
+                </a>
             </h4>
 
             <div class="d-flex justify-content-between mt-2">
