--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                                 <a asp-controller="Pie" asp-action="List" class="nav-link">Pies</a>
                             </li>
                         </ul>
+
+                        <vc:shopping-cart-summary></vc:shopping-cart-summary>
+
                     </div>
                 </div>
             </nav>
