--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             
                             <vc:category-menu></vc:category-menu>
+                            <li class="nav-item">
+                                <a asp-controller="Contact" asp-action="Index" class="nav-link">Contact</a>
+                            </li>
 
                         </ul>
 
