--- a/BethanysPieShop/Views/_ViewImports.cshtml
+++ b/BethanysPieShop/Views/_ViewImports.cshtml
@@ -4,3 +4,5 @@
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, BethanysPieShop
+
+@addTagHelper BethanysPieShop.TagHelpers.*, BethanysPieShop
