--- a/BethanysPieShop/Views/Order/Checkout.cshtml
+++ b/BethanysPieShop/Views/Order/Checkout.cshtml
@@ -5,6 +5,8 @@
         You are one step away from your delicious pies.
     </h3>
 
+    <div asp-validation-summary="All" class="text-danger"></div>
+
     <div class="col-6">
         <div class="row g-2">
             <div class="col-12">
