Add Sie Inetractivity using Blazor

--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -58,6 +58,10 @@
         </header>
 
         @RenderBody()
+
+        <script src="_framework/blazor.web.js"></script>
+
+        @RenderSection("Scripts", required: false)
     </div>
 </body>
 </html>
